modify: CRUD usando funciones del DBManager